# AIR-Mini-Project

./: .gitignore  app.py  pyproject.toml  vdr_embeddings.ipynb  vdr_modal.py
